[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-agent"
version = "0.0.1"
description = "An excellent agent build for LangGraph Platform."
authors = [
    {name = "jun99", email = "dkssud374@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-fireworks>=0.1.3",
    "langgraph-cli[inmem]>=0.3.3",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "langchain-community>=0.3.25",
    "dotenv>=0.9.9",
    "langchain-tavily>=0.2.3",
    "google-genai>=1.20.0",
    "langchain-mcp-adapters>=0.1.7",
    "isort>=6.0.1",
    "playwright>=1.52.0",
    "pymupdf>=1.26.1",
    "faiss-cpu>=1.11.0",
    "nest-asyncio>=1.6.0",
    "pillow>=11.2.1",
    "requests>=2.32.4",
]

[tool.hatch.build.targets.wheel]
packages = ["my_agent"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph>=0.2.0",
    "langchain-fireworks>=0.1.3",
    "langgraph-cli[inmem]>=0.3.3",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "langchain-community>=0.3.25",
    "dotenv>=0.9.9",
    "langchain-tavily>=0.2.3",
    "mcp[cli]>=1.9.4",
    "google-genai>=1.20.0",
    "google>=3.0.0",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-pinecone>=0.2.8",
    "black>=25.1.0",
]
